--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
   "module": "lib/bundle.esm.js",
   "type": "module",
   "scripts": {
-    "dev": "node --loader ts-node/esm --inspect ./src/index.ts",
-    "test": "node --loader ts-node/esm --inspect ./src/auth.ts",
-    "lint:eslint": "eslint --cache --max-warnings 0  \"{src,mock}/**/*.{ts,tsx}\" --fix",
-    "lint:prettier": "prettier --write  \"src/**/*.{js,json,tsx,md}\"",
-    "lint:lint-staged": "lint-staged",
+    "dev": "node --loader ts-node/esm --inspect ./src/index.ts"
   },
   "keywords": [
     "chatgpt",
@@ -24,6 +20,7 @@
   "dependencies": {
     "@types/node": "^18.11.11",
     "@waylaidwanderer/chatgpt-api": "^1.33.1",
+    "file-box": "^1.5.5",
     "qrcode-terminal": "^0.12.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
